# eegnet-v2

./: .gitignore  ARCHITECTURE.md  EXPERIMENT_REPORT.md  README.md  REPRODUCIBILITY.md  RESULTS.md  csp_pipeline.py  dataset.py  main.py  model.py  pyproject.toml  results.csv  results_loso_unified_lea9.csv  results_loso_unified_leatta9.csv  results_loso_unified_leatta9s1.csv  results_loso_unified_leatta9s2.csv  results_loso_unified_lratta9.csv  results_loso_unified_lratta9s2.csv  results_loso_unified_rs20.csv  results_within_cv_iv2a_unified_racvs1.csv  results_within_honest_unified_ctrl.csv  results_within_honest_unified_ea9.csv  results_within_honest_unified_wratta1.csv  run.sh  simple_test.py  test_run.py  test_train.py  train.py
.claude/: ralph-loop.local.md
docs/: index.html
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
models/: model_1.pt  model_2.pt  model_3.pt  model_4.pt  model_5.pt  model_6.pt  model_7.pt  model_8.pt  model_9.pt  pretrained.pt  pretrained_adaptalign_ea_s42_nov3.pt  pretrained_aligned_ea_s42_nov3.pt  pretrained_compact.pt  pretrained_freqaware_ea_s42_fqea3.pt  pretrained_unified_b440.pt  pretrained_unified_b830.pt  pretrained_unified_ctrl.pt  pretrained_unified_ea_ea9.pt  pretrained_unified_ea_s1_ea9s1.pt  pretrained_unified_ea_s2_ea9s2.pt  pretrained_unified_ea_s3_ea9s3.pt  pretrained_unified_none_base9.pt  pretrained_unified_none_s1_base9s1.pt  pretrained_unified_none_s2_base9s2.pt  pretrained_unified_none_s3_base9s3.pt  (+1 more)
(+63 files in other folders)
