[project]
name = "last-bci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Deep Learning
    "torch>=2.1.0,<2.6.0",
    "torchvision>=0.16.0,<0.21.0",
    # EEG Processing
    "mne>=1.8.0",
    "moabb>=1.2.0,<1.4.2",
    "pyriemann>=0.3",
    "graphifyy>=0.8.4",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
